--- a/Hospital/Hospital-web/src/main/webapp/paginas/seguro/RegistroHospitalizacion.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/seguro/RegistroHospitalizacion.xhtml
@@ -17,7 +17,7 @@
 		<h:form prependId="false">
 			<h:panelGrid id="paneldatos" columns="2">
 
-				<h:outputLabel for="cbCita" id="lblcita" value="Cita:" />
+				<h:outputLabel for="cbCita" id="lblcita" value="#{msj['hospitalizacion.cita']:}" />
 				<h:selectOneMenu id="cbCita"
 					value="#{controladorHospitalizacion.citaSeleccionada}">
 
@@ -26,34 +26,29 @@
 				</h:selectOneMenu>
 
 				<h:outputLabel for="cbfechaEntr" id="lblfechaEntr"
-					value="fecha de Entrada:" />
+					value="#{msj['hospitalizacion.fechaEntrada']:}" />
 				<p:calendar pattern="dd/MM/yyyy" id="cbfechaEntr"
 					value="#{controladorHospitalizacion.fechaEntrada}">
 				</p:calendar>
 
 				<h:outputLabel for="cbfechaSalida" id="lblfechaSal"
-					value="fecha de Salida:" />
+					value="#{msj['hospitalizacion.fechaSalida']:}" />
 				<p:calendar pattern="dd/MM/yyyy" id="cbfechaSalida"
 					value="#{controladorHospitalizacion.fechaSalida}">
 				</p:calendar>
 
-				<h:outputLabel for="cbCama" id="lblCama" value="Cama Disponible:" />
+				<h:outputLabel for="cbCama" id="lblCama" value="#{msj['hospitalizacion.camaDisponible']:}" />
 				<h:selectOneMenu id="cbCama"
 					value="#{controladorHospitalizacion.camaSeleccionada}">
 
 					<f:selectItems value="#{controladorHospitalizacion.cama}" var="c"
 						itemValue="#{c}" itemLabel="#{c.numero}"/>
 				</h:selectOneMenu>
-				<!--  <h:outputLabel for="tfAnotaciones" id="lblanotaciones"
-					value="anotaciones:" />
-				<h:inputTextarea id="tfAnotaciones"
-					value="#{controladorHospitalizacion.anotaciones}">
-				</h:inputTextarea>
--->
+			
 			</h:panelGrid>
 			<h:panelGrid id="panelbtns" columns="2">
 
-				<p:commandButton id="btncrear" value="Ordenar"
+				<p:commandButton id="btncrear" value="#{msj['hospitalizacion.Ordenar']:}"
 					process="@this,paneldatos" update="paneldatos" 
 					action="#{controladorHospitalizacion.ordenarHospitalizacion}"/>
 
