--- a/Hospital/Hospital-web/src/main/webapp/paginas/Medico/PaginaInicioPersonal.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Medico/PaginaInicioPersonal.xhtml
@@ -49,7 +49,7 @@
 
 			</h:panelGrid>
 
-			<h3>Ordenar salida de hospitalización</h3>
+			<h3>Citas programadas</h3>
 
 			<h:panelGrid id="panelDatos3" columns="2">
 
