--- a/Hospital/Hospital-web/src/main/webapp/paginas/publico/Login.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/publico/Login.xhtml
@@ -4,7 +4,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui" template="/template/indexLogIn.xhtml">
 
-	<ui:define name="cuerpoLogIn">
+	<ui:define name="cuerpo">
 		<h:form prependId="false">
 			<h:panelGrid id="panelDatosIngreso" columns="1"
 				style="text-align: center;">
