--- a/Hospital/Hospital-web/src/main/webapp/paginas/Medico/PaginaInicioPersonal.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Medico/PaginaInicioPersonal.xhtml
@@ -18,10 +18,10 @@
 					value="#{controladorFuncionPersonal.identificacionPaciente}" />
 
 				<p:commandButton id="btnbuscar" value="#{msj['usuario.buscar']}"
-					process="@this,panelDatos" update="panelDatos"
+					process="@this,panelDatos,panelDatos2" update="panelDatos,panelDatos2"
 					action="#{controladorFuncionPersonal.buscar}" />
 
-			</h:panelGrid>
+			</h:panelGrid> <br/>
 
 			<h:panelGrid id="panelDatos2" columns="2">
 
@@ -39,9 +39,12 @@
 					value="#{msj['usuario.nuevaFechaSalida']}" />
 				
 				<p:calendar id="button" value="#{calendarView.date2}"
-					showOn="button" />
+					showOn="button" />				
 
-				<p:commandButton id="btnEditarFecha"
+			</h:panelGrid>
+			
+			<h:panelGrid id="panelBotones1" columns="2">
+			<p:commandButton id="btnEditarFecha"
 					value="#{msj['usuario.editarFecha']}" process="@this,panelDatos2"
 					update="panelDatos2"
 					action="#{controladorFuncionPersonal.editarFechaSalida}" />
@@ -49,7 +52,6 @@
 				<p:commandButton id="btnDarAlta" value="#{msj['usuario.darAlta']}"
 					process="@this,panelDatos2" update="panelDatos2"
 					action="#{controladorFuncionPersonal.darAlta}" />
-
 			</h:panelGrid>
 
 			<h3>Citas programadas</h3>
