--- a/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/GestionQuirofano.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/GestionQuirofano.xhtml
@@ -7,7 +7,7 @@
 	<ui:define name="cuerpo">
 		<h:form prependId="false">
 
-			<h3>Registro de quirófanos</h3>
+			<h1>REGISTRO DE QUIROFANOS</h1>
 
 			<h:panelGrid id="panelRegistro" columns="2">
 
