--- a/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/MasOpcionesInsumos.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/MasOpcionesInsumos.xhtml
@@ -3,15 +3,56 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui" template="/template/index.xhtml">
-	
+
 	<ui:define name="cuerpo">
-	
-	
-	
-	 <h2>mas opciones pagina insumos</h2>
-	
-	
-	
-	
+
+
+		<h1>BUSQUEDA Y GESTION DE INSUMOS MEDICOS</h1>
+		<br></br>
+		<br></br>
+
+		<h:outputLabel for="tfbusqueda" id="lblbusqueda"
+			value="#{msj['insumos.descripcion']}:" />
+		<h:inputText id="tfbusqueda"
+			value="#{controladorMasOpcionesInsumos.descripcion}" />
+
+		<p:commandButton
+			action="#{controladorMasOpcionesInsumos.buscarInsumos()}"
+			process="@this" value="#{msj['usuario.buscar']}" update="paneltabla" />
+		<br></br>
+		<br></br>
+		<br></br>
+
+		<h:panelGrid id="paneltabla" columns="4">
+			<p:dataTable id="tablaQuir"
+				value="#{controladorMasOpcionesInsumos.listaMedicamentos}" var="med"
+				border="3">
+
+				<p:column headerText="#{msj['insumos.ide']}">
+					<h:outputLabel value="#{med.id}"></h:outputLabel>
+				</p:column>
+
+				<p:column headerText="#{msj['insumos.cantidad']}">
+					<h:outputLabel value="#{med.cantidad}"></h:outputLabel>
+				</p:column>
+
+				<p:column headerText="#{msj['insumos.descripcion']}">
+					<h:outputLabel value="#{med.descripcion}"></h:outputLabel>
+				</p:column>
+
+				<p:column headerText="#{msj['instalaciones.acciones']}">
+					<p:commandButton
+						action="#{controladorMasOpcionesInsumos.eliminarMedicamento(med)}"
+						process="@this" value="#{msj['instalaciones.eliminar']}"
+						update="paneltabla" />
+					<p:commandButton
+						action="#{controladorMasOpcionesInsumos.editarMedicamento(med.id)}"
+						process="@this" value="#{msj['instalaciones.editar']}"
+						update="paneltabla" />
+				</p:column>
+			</p:dataTable>
+		</h:panelGrid>
+
+
 	</ui:define>
-	</ui:composition>
+</ui:composition>
