--- a/Hospital/Hospital-web/src/main/webapp/paginas/Medico/HorarioMedico.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Medico/HorarioMedico.xhtml
@@ -45,12 +45,9 @@
 				<h:selectOneMenu id="cbDia"
 					value="#{controladorPersonal.diaSeleccionado}">
 
-					<f:selectItem itemValue="1" itemLabel="Lunes" />
-					<f:selectItem itemValue="2" itemLabel="Martes" />
-					<f:selectItem itemValue="3" itemLabel="Miercoles" />
-					<f:selectItem itemValue="4" itemLabel="Jueves" />
-					<f:selectItem itemValue="5" itemLabel="Viernes" />
-					<f:selectItem itemValue="6" itemLabel="Sabado" />
+					<f:selectItems value="#{controladorPersonal.diasSemana}"
+						var="t" itemValue="#{t}"/>
+
 
 				</h:selectOneMenu>
 
