--- a/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/MasOpcionesCamas.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/MasOpcionesCamas.xhtml
@@ -3,33 +3,24 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui" template="/template/index.xhtml">
-	
+
 	<ui:define name="cuerpo">
-	
-	<h1>BUSQUEDA Y GESTION DE CAMAS</h1>
-		<br></br>
-		<br></br>
 
-		<h:outputLabel for="tfbusqueda" id="lblbusqueda"
-			value="#{msj['masOpcionesQuirofano']}:" />
-		<h:inputText id="tfbusqueda"
-			value="#{controladorMasOpcionesCama.numeroCama}" />
-
-		<p:commandButton
-			action="#{controladorMasOpcionesCama.buscarCama()}"
-			process="@this" value="#{msj['usuario.buscar']}"
-			update="paneltabla" />
+		<h1>BUSQUEDA Y GESTION DE CAMAS</h1>
 		<br></br>
 		<br></br>
 		<br></br>
 
 		<h:panelGrid id="paneltabla" columns="4">
-			<p:dataTable id="tablaQuir"
+		<h:form>
+			<p:dataTable id="tablaQuir" emptyMessage="Ningun resultado"
 				value="#{controladorMasOpcionesCama.listaCamas}" var="cam"
-				border="3">
+				filteredValue="#{controladorMasOpcionesCama.listaNueva}" border="3">
 
-				<p:column headerText="#{msj['instalacion.numero']}">
-					<h:outputLabel value="#{cam.numero}"></h:outputLabel>
+				<p:column filterBy="#{cam.numero}"
+					headerText="#{msj['instalacion.numero']}" footerText="codigo">
+					<h:outputText value="#{cam.numero}">
+						</h:outputText>
 				</p:column>
 
 				<p:column headerText="#{msj['instalacion.descripcion']}">
@@ -51,7 +42,8 @@
 						update="paneltabla" />
 				</p:column>
 			</p:dataTable>
+			</h:form>
 		</h:panelGrid>
-	
+
 	</ui:define>
-	</ui:composition>
+</ui:composition>
