--- a/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/RegistroPersonalMedico.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/RegistroPersonalMedico.xhtml
@@ -67,7 +67,7 @@
 				<h:outputLabel id="lblUserName" value="#{msj['usuario.username']}" />
 				<h:inputText id="tfUserName" value="#{controladorPersonal.username}" />
 
-				<p:outputLabel for="tfpass" value="#{msj['usuario.password']}" />
+				<h:outputLabel id="lblPa" for="tfpass" value="#{msj['usuario.password']}" />
 				<h:inputSecret value="#{controladorPersonal.password}" id="tfpass" />
 
 			</h:panelGrid>
