Commit con sueño

--- a/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/MasOpcionesInsumos.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/MasOpcionesInsumos.xhtml
@@ -28,8 +28,7 @@
 				</p:column>
 
 				<p:column filterBy="#{med.descripcion}"
-					headerText="#{msj['insumos.descripcion']}"
-					footerText="medicamentos">
+					headerText="#{msj['insumos.descripcion']}">
 					<h:outputText value="#{med.descripcion}">
 						</h:outputText>
 				</p:column>
