--- a/Hospital/Hospital-web/src/main/webapp/paginas/Medico/RegistroHospitalizacion.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Medico/RegistroHospitalizacion.xhtml
@@ -2,7 +2,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui" template="/template/index.xhtml">
+	xmlns:p="http://primefaces.org/ui" template="/template/personal.xhtml">
 
 
 	<ui:define name="cuerpo">
@@ -17,42 +17,39 @@
 		<h:form prependId="false">
 			<h:panelGrid id="paneldatos" columns="2">
 
-				<h:outputLabel for="cbCita" id="lblcita" value="#{msj['hospitalizacion.cita']:}" />
-				<h:selectOneMenu id="cbCita"
-					value="#{controladorHospitalizacion.citaSeleccionada}">
-
-					<f:selectItems value="#{controladorHospitalizacion.citas}" var="c"
-						itemValue="#{c}" itemLabel="#{c}"/>
-				</h:selectOneMenu>
-
 				<h:outputLabel for="cbfechaEntr" id="lblfechaEntr"
-					value="#{msj['hospitalizacion.fechaEntrada']:}" />
+					value="Fecha Entrada" />
 				<p:calendar pattern="dd/MM/yyyy" id="cbfechaEntr"
 					value="#{controladorHospitalizacion.fechaEntrada}">
 				</p:calendar>
 
 				<h:outputLabel for="cbfechaSalida" id="lblfechaSal"
-					value="#{msj['hospitalizacion.fechaSalida']:}" />
+					value="Fecha Salida" />
 				<p:calendar pattern="dd/MM/yyyy" id="cbfechaSalida"
 					value="#{controladorHospitalizacion.fechaSalida}">
 				</p:calendar>
 
-				<h:outputLabel for="cbCama" id="lblCama" value="#{msj['hospitalizacion.camaDisponible']:}" />
+				<h:outputLabel for="cbCama" id="lblCama" value="Camas disponibles" />
 				<h:selectOneMenu id="cbCama"
 					value="#{controladorHospitalizacion.camaSeleccionada}">
 
 					<f:selectItems value="#{controladorHospitalizacion.cama}" var="c"
-						itemValue="#{c}" itemLabel="#{c.numero}"/>
+						itemValue="#{c}" itemLabel="#{c.numero}" />
 				</h:selectOneMenu>
-			
+
+				<h:outputLabel id="lblNom" value="Anotaciones" />
+				<h:inputTextarea id="tfNom"
+					value="#{controladorHospitalizacion.anotaciones}" />
+
 			</h:panelGrid>
 			<h:panelGrid id="panelbtns" columns="2">
 
-				<p:commandButton id="btncrear" value="#{msj['hospitalizacion.Ordenar']:}"
-					process="@this,paneldatos" update="paneldatos" 
-					action="#{controladorHospitalizacion.ordenarHospitalizacion}"/>
+				<h:form>
+					<p:commandButton value="Ordenar"
+						process="@this,paneldatos" update="paneldatos"
+						action="#{controladorHospitalizacion.ordenarHospitalizacion()}" />
 
-
+				</h:form>
 			</h:panelGrid>
 		</h:form>
 
