--- a/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/GestionExamenes.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/paginas/Administrador/GestionExamenes.xhtml
@@ -2,7 +2,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui" template="/template/InicioTemp.xhtml">
+	xmlns:p="http://primefaces.org/ui" template="/template/Inicio.xhtml">
 
 	<ui:define name="cuerpoExamenes">
 		<h:form prependId="false">
